Fixed Social Icons shape, and horizontal and vertical alignments (fixes #28340)
Original issue was that when adding Social Icons to a Navigation block, the icons would be oblong instead of circle. The icons only misshapened when size Small or Normal was selected. I also noticed that when a horizontal Nav block was added, the social icons wouldn't align horizontally, and in a vertical Nav block, the social icons wouldn't align vertically.

--- a/packages/block-library/src/social-links/editor.scss
+++ b/packages/block-library/src/social-links/editor.scss
@@ -11,8 +11,10 @@
 	transform: none;
 }
 
+// Align social links vertically to Page-Links text when using vertical Navigation block.
 .editor-styles-wrapper .wp-block-social-links {
 	padding: 0;
+	padding-left: 0.5em;
 }
 
 // Placeholder/setup state.
